--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.hcds1.mongodb.net/todos?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://jlosee1:shelby924@testbase.h5kxy.mongodb.net/DEMOtodoAuth?retryWrites=true&w=majority
